# sppark

ntt/: kernels.cu  ntt.cuh  parameters.cuh
poc/msm-cuda/: Cargo.toml
poc/msm-cuda/src/: util.rs
poc/ntt-cuda/: Cargo.toml
poc/ntt-cuda/benches/: ntt.rs
poc/ntt-cuda/src/: lib.rs
poc/ntt-cuda/tests/: ntt.rs
